--- a/SOFTWARE ENGINEERING/Lab7-eRegistrar/src/main/resources/templates/home/index.html
+++ b/SOFTWARE ENGINEERING/Lab7-eRegistrar/src/main/resources/templates/home/index.html
@@ -8,24 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="home/css/bootstrap.min.css">
-    <link rel="stylesheet" href="home/css/jquery-ui.css">
-    <link rel="stylesheet" href="home/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="home/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="home/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="home/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="home/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
-    <link rel="stylesheet" href="home/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="home/css/aos.css">
+    <link rel="stylesheet" href="css/aos.css">
 
-    <link rel="stylesheet" href="home/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
   </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color:black"">
   
 
 
@@ -56,7 +56,7 @@
           </div>
 
           <div class=" text-center mx-5">
-            <h1 class="m-0 site-logo"><a href="index.html">Credo</a></h1>
+            <h1 class="m-0 site-logo"><a href="./index.html">Credo</a></h1>
           </div>
 
           <div class="text-left">
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <h1 class="text-white">I'm Luiz Fernando de Andrade Gadelha</h1>
-                <p class="text-secondary">DataScientist<span class="mx-3">|</span> Speaker</p>
+                <p class="text-secondary">DataScientist<span class="mx-3">|</span>Mechatronics Engineer </p>
                 <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptate dolore, nostrum inventore quisquam totam dignissimos culpa! Eveniet.</p>
                 <p><a href="#contact-section" class="btn smoothscroll btn-primary">Contact Me</a></p>
               </div>
@@ -100,9 +100,9 @@
         </div>
       </div>
       
-      <img src="src/main/resources/templates/home/images/robot.jpg" alt="Image" class="img-face">
+    
 
-      <img src="home/images/credo_img_1.jpg" alt="Image" class="img-face">
+      <img src="images/credo_img_1.jpg" alt="Image" class="img-face">
       
     </div>  
 
@@ -163,16 +163,17 @@
       <div class="container">
         <div class="row ">
           <div class="col-12 mb-4 position-relative">
-            <h2 class="section-title">About Me</h2>
+            <h2 class="text-white">About Me</h2>
           </div>
           <div class="col-lg-6 order-2 order-lg-1">
-            <img class="img-fluid mb-4" src="home/images/credo_img_1.jpg" alt="Image">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repudiandae cupiditate, aspernatur ipsa enim magnam quaerat pariatur vero provident necessitatibus amet saepe officiis labore. Provident deserunt necessitatibus expedita. Voluptate, soluta?</p>
+            
+             <strong class="text-white"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repudiandae cupiditate, aspernatur ipsa enim magnam quaerat pariatur vero provident necessitatibus amet saepe officiis labore. Provident deserunt necessitatibus expedita. Voluptate, soluta?</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo praesentium quibusdam minus voluptatem sequi iure amet?</p>
+            </strong>
           </div>
           <div class="col-lg-6 order-3 pl-lg-5 order-lg-2">
             <div class="mb-5">
-              <strong class="text-black">DataScientist</strong>
+              <strong class="text-white">DataScientist</strong>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                   style="width: 70%;">
@@ -181,7 +182,8 @@
               </div>
             </div>
             <div class="mb-5">
-              <strong class="text-black">Mechatronics Engineer</strong>
+            
+              <strong class="text-white">Mechatronics Engineer</strong>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                   style="width: 75%;">
@@ -190,7 +192,7 @@
               </div>
             </div>
             <div class="mb-5">
-              <strong class="text-black">Systems/Web Developer</strong>
+              <strong class="text-white">Systems/Web Developer</strong>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                   style="width: 70%;">
@@ -199,7 +201,7 @@
               </div>
             </div>
             <div class="mb-5">
-              <strong class="text-black">Electronics Systems Development</strong>
+              <strong class="text-white">Electronics Systems Development</strong>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                   style="width: 30%;">
@@ -318,7 +320,7 @@
           <div class="col-md-3">
             <h3 class="footer-title">Credo</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, animi.</p>
-            <p><span class="d-inline-block d-md-block">203 Fake St. Mountain View,</span> San Francisco, California, USA</p>
+            <p><span class="d-inline-block d-md-block">Fairfield</span> OHIO, USA</p>
           </div>
           <div class="col-md-5 mx-auto">
             <div class="row">
@@ -367,17 +369,17 @@
 
   </div> <!-- .site-wrap -->
 
-  <script src="home/js/jquery-3.3.1.min.js"></script>
-  <script src="home/js/jquery-ui.js"></script>
-  <script src="home/js/popper.min.js"></script>
-  <script src="home/js/bootstrap.min.js"></script>
-  <script src="home/js/owl.carousel.min.js"></script>
-  <script src="home/js/jquery.easing.1.3.js"></script>
-  <script src="home/js/aos.js"></script>
-  <script src="home/js/jquery.fancybox.min.js"></script>
-  <script src="home/js/jquery.sticky.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
   
-  <script src="home/js/main.js"></script>
+  <script src="js/main.js"></script>
 
   
   </body>
