One to Many bugs correct

--- a/SOFTWARE ENGINEERING/Lab7-eRegistrar/src/main/resources/templates/home/index.html
+++ b/SOFTWARE ENGINEERING/Lab7-eRegistrar/src/main/resources/templates/home/index.html
@@ -8,21 +8,21 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/jquery-ui.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/bootstrap-datepicker.css">
 
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/aos.css">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/Lab7-eRegistrar/src/main/resources/static/css/style.css">
     
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" style="background-color:black"">
@@ -56,7 +56,7 @@
           </div>
 
           <div class=" text-center mx-5">
-            <h1 class="m-0 site-logo"><a href="./index.html">Credo</a></h1>
+            <h1 class="m-0 site-logo"><a href="./index.html">Luiz</a></h1>
           </div>
 
           <div class="text-left">
@@ -369,17 +369,17 @@
 
   </div> <!-- .site-wrap -->
 
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/jquery.sticky.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/jquery-3.3.1.min.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/jquery-ui.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/popper.min.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/bootstrap.min.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/owl.carousel.min.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/jquery.easing.1.3.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/aos.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/jquery.fancybox.min.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/jquery.sticky.js"></script>
   
-  <script src="js/main.js"></script>
+  <script src="/Lab7-eRegistrar/src/main/resources/static/js/main.js"></script>
 
   
   </body>
