dropdown bug solved

--- a/SOFTWARE ENGINEERING/eRegistrar/src/main/resources/templates/student/list.html
+++ b/SOFTWARE ENGINEERING/eRegistrar/src/main/resources/templates/student/list.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="eRegistrar Student/Class Management">
     <meta name="author" content="O. Kalu">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href=favicon.ico>
     <title>eRegistrar - List of Students</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -75,10 +75,7 @@
             </td>
 
 
-        </tr>
-        <tr th:if="${booksCount < 1}">
-            <td colspan="8" th:align="center">No books found</td>
-        </tr>
+
         </tbody>
 
         </tbody>
