--- a/SOFTWARE ENGINEERING/eRegistrar/src/main/resources/templates/student/edit.html
+++ b/SOFTWARE ENGINEERING/eRegistrar/src/main/resources/templates/student/edit.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="eRegistrar Student/Class Management">
     <meta name="author" content="O. Kalu">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href=favicon.ico>
     <title>eRegistrar - List of Students</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -76,7 +76,7 @@
                         <label for="lastName">Last Name</label>
                         <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                               class="alert alert-danger"></span>
-                        <input id="lastName" name="lastName" type="text" class="form-control"  th:value="${student.middleName}">
+                        <input id="lastName" name="lastName" type="text" class="form-control"  th:value="${student.lastName}">
                         <!--                                   aria-describedby="overdueFeeHelp" placeholder="0.00"-->
                         <!--                                   pattern="^[+-]?[0-9]{1,3}(?:,?[0-9]{3})*(?:\.[0-9]{2})?$"-->
                         <!--                                   th:value="${student.middleName}">-->
@@ -94,7 +94,7 @@
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="cpga">CPGA</label>
-                        <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{cpga}"
+                        <span th:if="${#fields.hasErrors('cpga')}" th:errors="*{cpga}"
                               class="alert alert-danger"></span>
                         <input id="cpga" name="cpga" type="text" class="form-control"
                                aria-describedby="overdueFeeHelp" placeholder="0.00"
@@ -108,19 +108,18 @@
                 <div class="col-md-2">
                     <div class="form-group">
                         <label for="isInternational">Is international</label><br>
-                        <select id="isInternational" name="isInternational" >
+                        <span th:if="${#fields.hasErrors('isInternational')}" th:errors="*{lastName}"
+                        class="alert alert-danger"></span>
+                        <select id="isInternational" name="isInternational"  value="no" >
                             <option value="yes">yes</option>
                             <option value="no">no</option>
 
 
                         </select>
-                        <input type="hidden" name="isInternational" th:value="${student.isInternational}"/>
+                        <input disabled="disabled" type="hidden" id="isInternational" name="isInternational" class="form-control"  th:value="${student.isInternational}"/>
 
                     </div>
                 </div>
-
-
-
 
 
 
