--- a/SOFTWARE ENGINEERING/eregistrarwebapi/src/main/resources/templates/student/new.html
+++ b/SOFTWARE ENGINEERING/eregistrarwebapi/src/main/resources/templates/student/new.html
@@ -117,7 +117,7 @@
 
 
                             </select>
-                            <input type="submit" name="isInternational" th:value="${student.isInternational}"/>
+                            <input type="text" name="isInternational" th:value="${student.isInternational}"/>
 
                         </div>
                     </div>
